<!--
  ~ Copyright 2022 VastGui
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Bluetooth</string>
    <string name="visibility">打开可见</string>
    <string name="find_device">寻找设备</string>
    <string name="bonded_device">已绑定</string>
    <string name="waiting">等待连接</string>
    <string name="stop_waiting">停止监听</string>
    <string name="disconnect">断开</string>
    <string name="hello">发送Hello</string>
    <string name="hi">发送Hi</string>
</resources>