<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2022 VastGui
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/enable_visibility"
        android:title="@string/visibility"
        android:orderInCategory="1" />

    <item
        android:id="@+id/find_device"
        android:title="@string/find_device"
        android:orderInCategory="2" />

    <item
        android:id="@+id/bonded_device"
        android:title="@string/bonded_device"
        android:orderInCategory="3" />

    <item
        android:id="@+id/listening"
        android:title="@string/waiting"
        android:orderInCategory="4" />

    <item
        android:id="@+id/stop_listening"
        android:title="@string/stop_waiting"
        android:orderInCategory="5" />

    <item
        android:id="@+id/disconnect"
        android:title="@string/disconnect"
        android:orderInCategory="6" />

    <item
        android:id="@+id/say_hello"
        android:title="@string/hello"
        android:orderInCategory="7" />

    <item
        android:id="@+id/say_hi"
        android:title="@string/hi"
        android:orderInCategory="8" />
</menu>